[SOUP] [GTK] warning: unused parameter at NetworkProcessSoup.cpp after r177056. https://bugs.webkit.org/show_bug.cgi?id=139534

Reviewed by Martin Robinson.

* NetworkProcess/soup/NetworkProcessSoup.cpp:
(WebKit::NetworkProcess::clearDiskCache): Comment the parameter names.

Canonical link: https://commits.webkit.org/157394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177145 268f45cc-cd09-0410-ab3c-d52691b4dbfc